apps/grafana/base/grafana-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: grafana-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: grafana.localhost
    http:
      paths:
      - path: /
        backend:
          serviceName: prometheus-grafana
          servicePort: 3000

  # - host: bar.localhost
  #   http:
  #     paths:
  #     - backend:
  #         serviceName: service2
  #         servicePort: 80
  #     - backend:
  #         serviceName: service3
  #         servicePort: 80
